# BitArray

./: .clangd  .gitignore  CMakeLists.txt  README.md
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  index.rst
include/: BitArray.hpp
sphinx/: conf.py
src/: main.cpp
